--- a/src/common/CMakeLists.txt
+++ b/src/common/CMakeLists.txt
@@ -10,6 +10,7 @@
 # implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
 #
 
+# 收集当前目录下非 Exclude 指定目录下的文件(源文件和头文件)
 CollectSourceFiles(
   ${CMAKE_CURRENT_SOURCE_DIR}
   PRIVATE_SOURCES
@@ -18,8 +19,10 @@ CollectSourceFiles(
   ${CMAKE_CURRENT_SOURCE_DIR}/Platform
   ${CMAKE_CURRENT_SOURCE_DIR}/Collision
   ${CMAKE_CURRENT_SOURCE_DIR}/Navigation
-  ${CMAKE_CURRENT_SOURCE_DIR}/PrecompiledHeaders)
+  ${CMAKE_CURRENT_SOURCE_DIR}/PrecompiledHeaders
+)
 
+# 依据构建 WORLD SERVER 或者是 MAP TOOLS 的配置重新计算一遍源文件
 if (BUILD_APPLICATION_WORLDSERVER OR BUILD_TOOLS_MAPS)
   unset(PRIVATE_SOURCES)
   CollectSourceFiles(
@@ -28,7 +31,8 @@ if (BUILD_APPLICATION_WORLDSERVER OR BUILD_TOOLS_MAPS)
     # Exclude
     ${CMAKE_CURRENT_SOURCE_DIR}/Debugging
     ${CMAKE_CURRENT_SOURCE_DIR}/Platform
-    ${CMAKE_CURRENT_SOURCE_DIR}/PrecompiledHeaders)
+    ${CMAKE_CURRENT_SOURCE_DIR}/PrecompiledHeaders
+  )
 endif()
 
 # Manually set sources for Debugging directory as we don't want to include WheatyExceptionReport in common project
@@ -42,18 +46,23 @@ if (USE_COREPCH)
   set(PRIVATE_PCH_HEADER PrecompiledHeaders/commonPCH.h)
 endif()
 
-# Group sources
+# IDE支持
 GroupSources(${CMAKE_CURRENT_SOURCE_DIR})
 
-add_library(common
-  ${PRIVATE_SOURCES})
+# PRIVATE_SOURCES 默认情况下会包含头文件，但是 cmake 会帮我们过滤掉
+add_library(
+  common
+  ${PRIVATE_SOURCES}
+)
 
+# 收集当前目录下(非 Exclude 指定目录)的所有文件夹
 CollectIncludeDirectories(
   ${CMAKE_CURRENT_SOURCE_DIR}
   PUBLIC_INCLUDES
   # Exclude
   ${CMAKE_CURRENT_SOURCE_DIR}/PrecompiledHeaders)
 
+# 添加包含目录
 target_include_directories(common
   PUBLIC
     # Provide the binary dir for all child targets
@@ -62,6 +71,7 @@ target_include_directories(common
   PRIVATE
     ${CMAKE_CURRENT_BINARY_DIR})
 
+# 添加链接项；PUBLIC 下的 target 通过 add_subdirectory(deps) 暴露出来
 target_link_libraries(common
   PRIVATE
     acore-core-interface
@@ -76,6 +86,7 @@ target_link_libraries(common
     stdfs
     fmt)
 
+# 构建 WORLD 或者 MMAP TOOL 需要引入 3D 引擎库
 if (BUILD_APPLICATION_WORLDSERVER OR BUILD_TOOLS_MAPS)
   target_link_libraries(common
     PUBLIC
@@ -83,11 +94,25 @@ if (BUILD_APPLICATION_WORLDSERVER OR BUILD_TOOLS_MAPS)
       Detour)
 endif()
 
+# IDE支持
 set_target_properties(common
   PROPERTIES
     FOLDER
       "server")
 
+if(BUILD_SHARED_LIBS)
+  if(UNIX)
+    install(TARGETS common
+      LIBRARY
+        DESTINATION lib)
+  elseif(WIN32)
+    install(TARGETS common
+      RUNTIME
+        DESTINATION "${CMAKE_INSTALL_PREFIX}")
+  endif()
+endif()
+
+# precompile header 支持
 # Generate precompiled header
 if (USE_COREPCH)
   add_cxx_pch(common ${PRIVATE_PCH_HEADER})
